--- a/_posts/2017-02-24-hello-2017.markdown
+++ b/_posts/2017-02-24-hello-2017.markdown
@@ -11,40 +11,22 @@ tags:
 ---
 
 
-## 前言
+## 正文
 
 ShenBao 的 Blog 就这么开通了。
 
 2017 年，ShenBao 总算有个地方可以好好写点东西了。
 
 
-作为一个程序员， Blog 这种轮子要是挂在大众博客程序上就太没意思了。一是觉得大部分 Blog 服务都太丑，二是觉得不能随便定制不好玩。之前因为太懒没有折腾，所以之前就是简单的做个记录罢了！（ps：[原博客](https://shenbao.github.io/blog)）。
+作为一个程序员， Blog 这种轮子要是挂在大众博客程序上就太没意思了。
+
+- 一是觉得大部分 Blog 服务都太丑；
+- 二是觉得不能随便定制不好玩。
+
+之前因为太懒没有折腾，所以之前就是简单的做个记录罢了！（ps：[原博客](https://shenbao.github.io/blog)）。
 
 
----
-
-## 正文
-
-接下来说说搭建这个博客的技术细节。  
-
-正好之前就有关注过 [GitHub Pages](https://pages.github.com/) + [Jekyll](http://jekyllrb.com/) 快速 Building Blog 的技术方案，非常轻松时尚。
-
-其优点非常明显：
-
-* **Markdown** 带来的优雅写作体验
-* 非常熟悉的 Git workflow ，**Git Commit 即 Blog Post**
-* 利用 GitHub Pages 的域名和免费无限空间，不用自己折腾主机
-* Jekyll 的自定制非常容易，基本就是个模版引擎
-
-
-当然 GitHub 在国内访问起来太慢，目前暂时先不考虑（ps：后续有空研究研究）。
-
-
----
-
-配置的过程中也没遇到什么坑，基本就是 Git 的流程，相当顺手
-
-之后会出一篇搭建过程的博客，敬请期待！！！
+当然在配置的过程中也没遇到什么坑，之后会出一篇搭建过程的博客，敬请期待！！！
 
 
 ## 后记
@@ -52,9 +34,7 @@ ShenBao 的 Blog 就这么开通了。
 回顾这个博客的诞生，纯粹是出于个人兴趣。
 
 
-如果你恰好逛到了这里，那希望对你有所帮助！（ps：）
+如果你恰好逛到了这里，那希望对你有所帮助！
 
 
 —— ShenBao 于 2017.02.24
-
-
