--- a/_posts/ES6/2017-05-03-es6 list.md
+++ b/_posts/ES6/2017-05-03-es6 list.md
@@ -41,6 +41,18 @@ tags:
 - [带标签的模板字面量](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/template_strings#%E5%B8%A6%E6%A0%87%E7%AD%BE%E7%9A%84%E6%A8%A1%E6%9D%BF%E5%AD%97%E7%AC%A6%E4%B8%B2)
 - [原始字符串](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/template_strings#%E5%8E%9F%E5%A7%8B%E5%AD%97%E7%AC%A6%E4%B8%B2)
 
+#### 原有字面量加强
+
+- 更安全的二进制字面量（0b1111101）
+- 更安全的八进制字面量（0o767）
+- 字符串支持 Unicode
+    - [String.fromCodePoint](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/fromCodePoint)
+    - [String.prototype.codePointAt](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String/codePointAt)
+- 正则表达式字面量添加
+    - [Unicode 支持（u 标记）](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/RegExp/unicode)
+    - [添加 y 标记，支持粘滞匹配](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/RegExp#Example:_Using_a_regular_expression_with_the_sticky_flag)
+
+#### 对象属性加强
 
 - []()
 - []()
