--- a/_posts/ES6/2017-05-03-es6 list.md
+++ b/_posts/ES6/2017-05-03-es6 list.md
@@ -54,6 +54,15 @@ tags:
 
 #### 对象属性加强
 
+- 属性定义支持短语法 obj = { x, y }
+- 属性名支持表达式 obj = {["baz" + quux() ]: 42}
+- [添加 __proto__ 属性，但不建议使用](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object/proto)
+
+#### [解构赋值](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment)
+
+- 数组匹配 [ b, a ] = [ a, b ]
+- 对象匹配 let { a, b, c } = objABC
+- 参数匹配 function g ({ name: n, val: v }) {}
 - []()
 - []()
 - []()
