--- a/_posts/ES6/2017-05-03-es6 list.md
+++ b/_posts/ES6/2017-05-03-es6 list.md
@@ -63,9 +63,14 @@ tags:
 - 数组匹配 [ b, a ] = [ a, b ]
 - 对象匹配 let { a, b, c } = objABC
 - 参数匹配 function g ({ name: n, val: v }) {}
-- []()
-- []()
-- []()
+
+#### 模块
+
+- [导入（import）](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/import)
+- [导出（export）](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/export)
+- [默认导出（export default）](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/export#%E9%BB%98%E8%AE%A4%E5%AF%BC%E5%87%BA)
+
+
 - []()
 - []()
 - []()
