--- a/_posts/ES6/2017-05-03-es6 list.md
+++ b/_posts/ES6/2017-05-03-es6 list.md
@@ -70,12 +70,17 @@ tags:
 - [导出（export）](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/export)
 - [默认导出（export default）](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/export#%E9%BB%98%E8%AE%A4%E5%AF%BC%E5%87%BA)
 
+#### [类](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Classes)
 
-- []()
-- []()
-- []()
-- []()
-- []()
+- [使用 extends 实现继承](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Classes#%E4%BD%BF%E7%94%A8_extends_%E5%88%9B%E5%BB%BA%E5%AD%90%E7%B1%BB)
+- [重写构造器](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Classes#Species)
+- [super 关键字](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Classes#%E4%BD%BF%E7%94%A8_super_%E5%BC%95%E7%94%A8%E7%88%B6%E7%B1%BB)
+
+#### 迭代
+
+- [迭代器](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Iterators_and_Generators#%E8%BF%AD%E4%BB%A3%E5%99%A8)
+- [for of](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/for...of)
+
 - []()
 - []()
 - []()
