--- a/_posts/ES6/2017-05-03-es6 list.md
+++ b/_posts/ES6/2017-05-03-es6 list.md
@@ -81,8 +81,12 @@ tags:
 - [迭代器](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Iterators_and_Generators#%E8%BF%AD%E4%BB%A3%E5%99%A8)
 - [for of](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Statements/for...of)
 
+#### [生成器](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Guide/Iterators_and_Generators#%E7%94%9F%E6%88%90%E5%99%A8%EF%BC%88Generators%EF%BC%89_%E4%B8%80%E4%B8%AA%E6%9B%B4%E5%A5%BD%E7%9A%84%E6%96%B9%E6%B3%95%E6%9D%A5%E6%9E%84%E5%BB%BA%E9%81%8D%E5%8E%86%E5%99%A8)
+#### [Promise](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Promise)
+
 - []()
 - []()
 - []()
 
+#### []()
 
