--- a/_posts/ES6/2017-05-03-es6 list.md
+++ b/_posts/ES6/2017-05-03-es6 list.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "ES6 新特性列表"
-subtitle:   "积累ES6新特征"
+subtitle:   "积累ES6新特征列表，对应MDN地址"
 date:       2017-05-03 20:00:00
 author:     "ShenBao"
 catalog: true
