--- a/_posts/JavaScript/2017-06-12-js fn.md
+++ b/_posts/JavaScript/2017-06-12-js fn.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "编写一个 JavaScript 函数 uniqueNums，该函数有一个参数 n（一个不大 31 的整数），其返回值是一个数组，该数组内是 n 个随机且不重复的整数，且整数取值范围是 [2, 32]"
-subtitle:   "来自网络"
+subtitle:   "来自网络微信博文的思考"
 date:       2017-06-12 14:00:00
 author:     "ShenBao"
 catalog: true
