--- a/_posts/HTML/2016-04-16-HTML meta.md
+++ b/_posts/HTML/2016-04-16-HTML meta.md
@@ -81,13 +81,30 @@ style-src cdn.example.org third-party.org; child-src https:
 - 其他资源：没有限制
 启用后，不符合 CSP 的外部资源就会被阻止加载。
 
+### content-type（已过时）
+定义文档的MIME类型，后跟其字符编码。
 
+- 不要使用这个值，因为它已经过时了。推荐使用<meta>元素上的charset属性。
+- 由于<meta>无法在XHTML或HTML5的XHTML序列化中更改文档类型，因此不要使用<meta>将MIME类型设置为XHTML MIME类型。
 
+### refresh
+该指令指定：
 
+- 如果content属性只包含一个正整数，则表示该页面重新加载的秒数。
+- 如果content属性包含一个正整数，后跟字符串'; url ='，那么表示当前页面XX秒后重定向到另一个有效的URL。
+```
+<meta http-equiv="refresh" content="2；URL=http://www.github.com/"> //意思是2秒后跳转到github
+```
 
+### set-cookie（已过时）
+定义页面的cookie，对应的content值必须遵循IETF HTTP Cookie Specification
 
+不要使用这条指令，使用HTTP头的Set-Cookie替代
 
-
-
+### X-UA-Compatible
+用于告知浏览器以何种版本来渲染页面。
+```
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/> //指定IE和Chrome使用最新版本渲染当前页面
+```
 
 
