--- a/_posts/HTML/2016-04-16-HTML meta.md
+++ b/_posts/HTML/2016-04-16-HTML meta.md
@@ -108,3 +108,26 @@ style-src cdn.example.org third-party.org; child-src https:
 ```
 
 
+
+
+## name
+name属性的定义是属于document-level metadata，不能和以下属性同时设置： itemprop, http-equiv 或 charset。
+
+该元数据名称与content属性包含的值相关联。 name属性的可能值为：
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
