--- a/_posts/HTML/2016-04-16-HTML meta.md
+++ b/_posts/HTML/2016-04-16-HTML meta.md
@@ -145,8 +145,16 @@ renderer是为双核浏览器准备的，用于指定双核浏览器默认以何
 <meta name="renderer" content="ie-stand"> //默认IE标准模式
 ```
 
+### referrer
+referrer 控制document发起的Request请求中附加的Referer HTTP header，相应的值在content中：
 
-
+content	   | 含义
+---|---
+no-referrer	| 不发送HTTP Referer头
+origin	    | 发送document的origin
+no-referrer-when-downgrade	| 将origin作为referer发送到和当前页面同等安全的URLs（https-> https），但不会将origin                      |    发送到不安全的URLS（https-> http）。这是默认行为。
+origin-when-crossorigin	    | same-origin的请求，发送的完整URL（剥离参数），但在其他情况下只发送origin
+unsafe-URL	                | same-origin 或 cross-origin的请求，将发送完整的URL（剥离参数）
 
 
 
