--- a/_posts/HTML/2016-04-16-HTML meta.md
+++ b/_posts/HTML/2016-04-16-HTML meta.md
@@ -174,9 +174,17 @@ noimageindex	|   要求此页面不作为引用页面的索引图像的显示。
 nocache	        |   和noarchive同义	|   Bing
 
 
+### viewport
+提供了关于viewport初始大小的大小的提示。仅供移动设备使用。
 
-
-
+值	|   content取值	|   描述
+---|---|---
+width	        |   整数或device-width	   |    定义viewport的像素宽度，或允许viewport适应设备的屏幕宽度。
+height	        |   整数或device-height	|   定义viewport的高度。没有任何浏览器使用（？？？）
+initial-scale	|   0.0 - 10.0	       |        定义设备宽度（纵向模式下的设备宽度或横向模式下的设备高度）与viewport大小之间的比例。
+maximum-scale	|   0.0 - 10.0      	|       定义最大的缩放级别。它必须大于或等于minimum-scale，否则视为未定义。浏览器设置可以忽略此规则，iOS10 +默认情况下忽略它。
+minimum-scale	|   0.0 - 10.0	       |    定义最小的缩放级别。它必须小于或等于maximum-scale，否则视为未定义。浏览器设置可以忽略此规则，iOS10 +默认情况下忽略它。
+user-scalable	|   yes 或 no	       |    如果设置为no，用户将无法放大网页。默认值为yes。浏览器设置可以忽略此规则，iOS10 +默认情况下忽略它。
 
 
 
