--- a/_posts/HTML/2016-04-16-HTML meta.md
+++ b/_posts/HTML/2016-04-16-HTML meta.md
@@ -152,7 +152,7 @@ content	   | 含义
 ---|---
 no-referrer	| 不发送HTTP Referer头
 origin	    | 发送document的origin
-no-referrer-when-downgrade	| 将origin作为referer发送到和当前页面同等安全的URLs（https-> https），但不会将origin                      |    发送到不安全的URLS（https-> http）。这是默认行为。
+no-referrer-when-downgrade	| 将origin作为referer发送到和当前页面同等安全的URLs（https-> https），但不会将origin发送到不安全的URLS（https-> http）。这是默认行为。
 origin-when-crossorigin	    | same-origin的请求，发送的完整URL（剥离参数），但在其他情况下只发送origin
 unsafe-URL	                | same-origin 或 cross-origin的请求，将发送完整的URL（剥离参数）
 
