--- a/_posts/HTML/2016-04-16-HTML meta.md
+++ b/_posts/HTML/2016-04-16-HTML meta.md
@@ -94,7 +94,7 @@ style-src cdn.example.org third-party.org; child-src https:
 - 如果content属性包含一个正整数，后跟字符串'; url ='，那么表示当前页面XX秒后重定向到另一个有效的URL。
 
 ```
-<meta http-equiv="refresh" content="2；URL=http://www.github.com/"> //意思是2秒后跳转到github
+<meta http-equiv="refresh" content="2；URL=http://www.github.com/">
 ```
 
 ### set-cookie（已过时）
