--- a/_posts/other/2018-04-16-wxss-tool.md
+++ b/_posts/other/2018-04-16-wxss-tool.md
@@ -9,6 +9,10 @@ tags:
     - Blog
 ---
 
+
+升级版：[小程序开发 - 小工具](https://github.com/ShenBao/wechat-app-tool)
+
+
 微信小程序wxss小工具，将scss转化为wxss,并自动生成兼容的css代码
 
 ## 运行
